deploy/envoy/envoy.yaml
static_resources:
  listeners:
  - name: listener_http
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route:
                  weighted_clusters:
                    clusters:
                    - name: us_worker
                      weight: 33
                    - name: eu_worker
                      weight: 33
                    - name: apac_worker
                      weight: 34
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: us_worker
    connect_timeout: 0.5s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: us_worker
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: nebula-us.nebulastream.workers.dev
                port_value: 80

  - name: eu_worker
    connect_timeout: 0.5s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: eu_worker
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: nebula-eu.nebulastream.workers.dev
                port_value: 80

  - name: apac_worker
    connect_timeout: 0.5s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: apac_worker
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: nebula-apac.nebulastream.workers.dev
                port_value: 80

admin:
  access_log_path: /dev/stdout
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
